--- a/app/views/teams/index.html.slim
+++ b/app/views/teams/index.html.slim
@@ -1,9 +1,6 @@
-.page-header
-  = link_to new_team_path, class: 'btn btn-primary' do
-    span.glyphicon.glyphicon-plus
-    |  New Team
-  h1
-    | Listing teams
+.row
+  .col-md-12
+    h1 Teams
 
 .table-responsive
   table.table.table-striped.table-bordered.table-hover
