--- a/app/views/shared/_sub_goals.slim
+++ b/app/views/shared/_sub_goals.slim
@@ -1,7 +1,7 @@
 ol.sub_goal
   - sub_goals.each do |sub_goal|
     .row
-      .col-md-10
+      .col-sm-10
         li
           h3.goal
             =link_to sub_goal.name, sub_goal
@@ -11,11 +11,11 @@ ol.sub_goal
                   .mini-edit
                     .glyphicon.glyphicon-edit
           small
-              =sub_goal.owner_name
+              =link_to sub_goal.owner_name, sub_goal.owner
           .deadline =sub_goal.display_deadline
           .smaller
             =pluralize(sub_goal.children.count,"Subgoal") unless sub_goal.children.empty?
-      .col-md-2.sub_score
+      .col-sm-2.sub_score
         h3.amount = sub_goal.display_amount
         .date = sub_goal.current_display_date
         /small = link_to 'Edit',edit_goal_path(sub_goal), {:class=>"btn-sm btn-primary"}
