style/view tweaks

--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -7,8 +7,10 @@
     h3.vision Government is transformed by GDS supporting departments to deliver end to end services that are designed and built around user needs.
 .row
   .col-md-12
-    h2 Top Level GDS Goals
+    p.lead In 2016/17 we will contribute to this vision by doing the following:
     ul
+      li
+        h3 Provide standards, policy, support, and guidance so that services and technology work effectively and consistently for the public and government.
       li
         h3 Create the platforms and tools that make it simple for government to build, iterate and retire services.
       li
@@ -17,8 +19,8 @@
         h3 Build and leverage a diverse and inclusive workforce and workplace in GDS, and across the function, so that GDS and the technology function are seen as great exampels within the sector.
 
 
-.row
-  .col-md-10
+.row style="margin-top: 5rem"
+  .col-sm-12
     /hide new button for now, the site is essentially read-only (data from google sheets)
       .span style="margin: 2rem 0"
         =link_to "Add New", new_goal_path,class: "btn-success btn-sm" if is_admin?
