--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -35,6 +35,7 @@ ol.sub_goal li
   list-style: decimal !important
   h3.goal
     line-height: 3rem !important
+    margin-top: 1rem
     margin-bottom: 0
 
 .vacancy
@@ -128,12 +129,13 @@ ol.sub_goal
     margin-bottom: 2rem
     small
       color: #555
+      font-size: 1.6rem
       font-weight: 400
       display: block
     .smaller
       color: #888
       font-weight: 200
-      font-size: 1.5rem
+      font-size: 1.4rem
 
 .slug:hover
   background-color: #ddd
