--- a/app/views/shared/_sub_goals.slim
+++ b/app/views/shared/_sub_goals.slim
@@ -5,13 +5,14 @@ ol.sub_goal
         li
           h3.goal
             =link_to sub_goal.name, sub_goal
-            /
+            / Hide inline edit button...
               -if is_admin?
                 =link_to edit_goal_path(sub_goal) do
                   .mini-edit
                     .glyphicon.glyphicon-edit
-          small
-              =link_to sub_goal.owner_name, sub_goal.owner
+          .smaller
+              -if(sub_goal.team)
+                =link_to sub_goal.team.name, sub_goal.team
           .deadline =sub_goal.display_deadline
           .smaller
             =pluralize(sub_goal.children.count,"Subgoal") unless sub_goal.children.empty?
