added some padding on index page

--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -1,11 +1,11 @@
 = render 'breadcrumb'
 
-.row
+.row.padded-row
   .col-md-12
     p.lead What is GDS doing in 2016/17?
     h2 Vision
     h3.vision Government is transformed by GDS supporting departments to deliver end to end services that are designed and built around user needs.
-.row
+.row.padded-row
   .col-md-12
     p.lead In 2016/17 we will contribute to this vision by doing the following:
     ul
@@ -19,7 +19,7 @@
         h3 Build and leverage a diverse and inclusive workforce and workplace in GDS, and across the function, so that GDS and the technology function are seen as great exampels within the sector.
 
 
-.row style="margin-top: 5rem"
+.row.padded-row
   .col-sm-12
     /hide new button for now, the site is essentially read-only (data from google sheets)
       .span style="margin: 2rem 0"
