--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -15,6 +15,9 @@
 //@import "design-patterns/buttons"
 //@import "design-patterns/breadcrumbs"
 
+.padded-row
+  margin-top: 5rem
+  
 body
   padding-top: 0 !important
 
