more visual cleanup and proper linking

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -15,9 +15,17 @@
 //@import "design-patterns/buttons"
 //@import "design-patterns/breadcrumbs"
 
+
+ul.biglist
+  list-style-type: none
+  margin-left: -2rem
+  li
+    font-size: 1.6rem
+    line-height: 2.7rem
+
 .padded-row
   margin-top: 5rem
-  
+
 body
   padding-top: 0 !important
 
