--- a/app/views/goals/show.html.slim
+++ b/app/views/goals/show.html.slim
@@ -3,7 +3,7 @@
 .row
   .col-sm-9
     - unless (@goal.owner_name.empty?)
-      h4 =@goal.owner_name
+      h4 =link_to @goal.owner_name, @goal.owner
       h5 =@goal.display_deadline
     h1.vision = @goal.name
     -if is_admin?
