more style tweaks and view consistency

--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -8,7 +8,7 @@
 .row.padded-row
   .col-md-12
     p.lead In 2016/17 we will contribute to this vision by doing the following:
-    ul.biglist
+    ol.sub_goal
       li
         h3 Provide standards, policy, support, and guidance so that services and technology work effectively and consistently for the public and government.
       li
