add header navigation for Teams & Groups

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,6 +13,9 @@
     .content
       nav#proposition-menu
         =link_to "GDS Goals 2016/17", root_path, :id=>"proposition-name"
+        ul#proposition-links
+          li =link_to "Groups", groups_path
+          li =link_to "Teams", teams_path
 - content_for :content do
   #wrapper.grid-row
     main#content.column-two-thrids[role="main"]
