fix typo in top-level objective

--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -16,7 +16,7 @@
       li
         h3 Lead the digital, data and technology function so that government has the skills and capability it needs to transform itself.
       li
-        h3 Build and leverage a diverse and inclusive workforce and workplace in GDS, and across the function, so that GDS and the technology function are seen as great exampels within the sector.
+        h3 Build and leverage a diverse and inclusive workforce and workplace in GDS, and across the function, so that GDS and the technology function are seen as great examples within the sector.
 
 
 .row.padded-row
