updated readme and added 'Vision' link in top nav to take you home.

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,6 +14,7 @@
       nav#proposition-menu
         =link_to "GDS Goals 2016/17", root_path, :id=>"proposition-name"
         ul#proposition-links
+          li =link_to "Vision", goals_path
           li =link_to "Groups", groups_path
           li =link_to "Teams", teams_path
 - content_for :content do
