--- a/app/views/teams/show.html.slim
+++ b/app/views/teams/show.html.slim
@@ -6,6 +6,7 @@
       'Part of the
       =link_to @team.group.name + " Group", @team.group
     h3 Goals (#{@team.goals.count})
+    /= (params["expand_all"]) ? link_to("Collapse all", team_path(@team)) : link_to("Expand all", "?expand_all=1")
     == render :partial=>"shared/sub_goals", :locals=>{sub_goals: @team.goals}
 
 
