right align numbers in bullets

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -62,7 +62,7 @@ ol.nice_list
     margin-right: 15px
     margin-bottom: 15px
     min-width: 35px !important
-    text-align: left
+    text-align: right
     font-size: 20px
     font-weight: 700
     line-height: 1
