--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -7,7 +7,7 @@
     h3.vision Government is transformed by GDS supporting departments to deliver end to end services that are designed and built around user needs.
 .row.padded-row
   .col-md-12
-    p.lead In 2016/17 we will realise this vision by delivering the following:
+    p.lead In 2016/17 we will do the following:
     ol.nice_list
       li
         .point
@@ -22,16 +22,17 @@
         .point
           h3 Build and leverage a diverse and inclusive workforce and workplace in GDS, and across the function, so that GDS and the technology function are seen as great examples within the sector.
 
-span style="page-break-after: always"
-
 .row.padded-row
   .col-sm-12
-    = (params["expand_all"]) ? link_to("Collapse all", goals_path) : link_to("Expand all", "?expand_all=1")
+    .noprint.expand_collapse
+      = (params["expand_all"]) ? link_to("Collapse all", goals_path) : link_to("Expand all", "?expand_all=1")
+.row.padded-row
+  .col-sm-12
     / hide "new" button for now, the site is essentially read-only (data from google sheets)
       .span style="margin: 2rem 0"
         =link_to "Add New", new_goal_path,class: "btn-success btn-sm" if is_admin?
     - Group.all.each do |group|
-      .well style="margin-top: 4rem; clear:both"
+      .well.group_well
         h2.heading-large =link_to group.name + " Group", group
       == render partial: 'shared/sub_goals', locals: {sub_goals: group.top_level_goals}
 
