add menu expander link for mobile

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,6 +12,7 @@
 - content_for :proposition_header do
   .header-proposition.noprint
     .content
+      a href='#proposition-links' class='js-header-toggle menu' Menu
       nav#proposition-menu
         =link_to "GDS Goals 2016/17", root_path, :id=>"proposition-name"
         ul#proposition-links
