--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -36,8 +36,6 @@
       font-size: 25px
       line-height: 3rem
 
-.expand_collapse
-
 ol.nice_list
   counter-reset: item
   padding-left: 0
@@ -61,6 +59,7 @@ ol.nice_list
     clear: both
     display: block
     padding-top: 10px
+    page-break-inside: avoid
     .point
       display: inline-block
       float: left
