added FAQ and link to About page in nav

--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -2,12 +2,15 @@
 
 .row.padded-row
   .col-md-12
-    /p.lead What is GDS doing in 2016/17?
+    h1 GDS Vision and Goals for 2016/17
+    p.lead This site explains what GDS is doing in the 2016/17 financial year.
+.row.padded-row
+  .col-md-12
     h2 Vision
     h3.vision Government is transformed by GDS supporting departments to deliver end to end services that are designed and built around user needs.
 .row.padded-row
   .col-md-12
-    p.lead To achieve this vision we will do the following:
+    h2 Goals that will help us achieve this vision:
     ol.nice_list
       li
         .point
@@ -24,6 +27,7 @@
 
 .row.padded-row
   .col-sm-12
+    h2 Goals by Business Group
     .noprint.expand_collapse
       = (params["expand_all"]) ? link_to("Collapse all", goals_path) : link_to("Expand all", "?expand_all=1")
 .row.padded-row
