--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -19,6 +19,7 @@
           li =link_to "Vision", goals_path
           li =link_to "Groups", groups_path
           li =link_to "Teams", teams_path
+          li =link_to "About", about_path
 - content_for :body_end
   javascript:
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
