--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -14,7 +14,7 @@
     .content
       a href='#proposition-links' class='js-header-toggle menu' Menu
       nav#proposition-menu
-        =link_to "GDS Goals 2016/17", root_path, :id=>"proposition-name"
+        =link_to "GDS Goals", root_path, :id=>"proposition-name"
         ul#proposition-links
           li =link_to "Vision", goals_path
           li =link_to "Groups", groups_path
