--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -35,14 +35,11 @@
     / hide "new" button for now, the site is essentially read-only (data from google sheets)
       .span style="margin: 2rem 0"
         =link_to "Add New", new_goal_path,class: "btn-success btn-sm" if is_admin?
-    - @group_info = {:Digital=>{:budget=>100,:headcount=>458},:Technology=>{:budget=>35.8, :headcount=>266},:Operations=>{:budget=>19.8, :headcount=>165}, :Data=>{:budget=>3.7, :headcount=>77}}
-    /- Group.all.each do |group|
-    - @group_info.keys.each do |group_name|
-      - group =  Group.find_by_name(group_name.to_s)
+    - Group.all.each do |group|
       .well.group_well
         h2.heading-large =link_to group.name + " Group", group
-        h4 Budget: £#{@group_info[group_name][:budget]}m
-        h4 Headcount: #{@group_info[group_name][:headcount]}
+        h4 Budget: £#{(group.budget.to_f/1000000).round(1)}m
+        h4 Headcount: #{group.headcount}
       == render partial: 'shared/sub_goals', locals: {sub_goals: group.top_level_goals}
 
 - if is_admin?
