added link to learn more on index page.

--- a/app/views/goals/index.html.slim
+++ b/app/views/goals/index.html.slim
@@ -3,7 +3,7 @@
 .row.padded-row
   .col-md-12
     h1 GDS Vision and Goals for 2016/17
-    p.lead This site explains what GDS is doing in the 2016/17 financial year.
+    p.lead This site explains what GDS is doing in the 2016/17 financial year. #{link_to "Learn more.",about_path}
 .row.padded-row
   .col-md-12
     h2 Vision
