--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -25,10 +25,17 @@
   a::after
     content: none !important
 
-  ol.nice_list.goals
+  ol.nice_list
+    li::before
+      min-width: 35px !important
     h3
       font-size: 15px
       line-height: 2rem
+
+@media screen and (max-width: 415px)
+  ol.nice_list li::before
+    text-align: left !important
+    font-size: 20px !important
 
 @media screen
   ol.nice_list.goals
@@ -73,9 +80,9 @@ ol.nice_list
     display: inline-block
     margin-right: 15px
     margin-bottom: 15px
-    min-width: 35px !important
     text-align: right
-    font-size: 20px
+    font-size: 24px
+    min-width: 35px
     font-weight: 700
     line-height: 1
 
