--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -14,8 +14,24 @@
 
 // Mixins to generate components (chunks of UI)
 //@import "design-patterns/alpha-beta"
-//@import "design-patterns/buttons"
+@import "design-patterns/_buttons"
 //@import "design-patterns/breadcrumbs"
+
+.button
+  @include button
+
+.button-start
+  font-size: 24px
+  line-height: 1.25
+  font-weight: 700
+  font-family: "nta", Arial, sans-serif
+  font-weight: 700
+  text-transform: none
+  /*
+    background-image: url("/public/images/icons/icon-pointer.png")
+    background-repeat: no-repeat
+    background-position: 100% 50%
+    padding: 0.3684210526em 2.1578947368em 0.2105263158em 0.8421052632em
 
 @media print
   .noprint, .header-global
@@ -31,6 +47,9 @@
     h3
       font-size: 15px
       line-height: 2rem
+
+    li
+      page-break-inside: avoid
 
 @media screen and (max-width: 415px)
   ol.nice_list li::before
