--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -15,11 +15,12 @@
       a href='#proposition-links' class='js-header-toggle menu' Menu
       nav#proposition-menu
         =link_to "GDS Goals", root_path, :id=>"proposition-name"
-        ul#proposition-links
-          li =link_to "Vision", goals_path
-          li =link_to "Groups", groups_path
-          li =link_to "Teams", teams_path
-          li =link_to "About", about_path
+        - if (signed_in?)
+          ul#proposition-links
+            li =link_to "Vision", goals_path
+            li =link_to "Groups", groups_path
+            li =link_to "Teams", teams_path
+            li =link_to "About", about_path
 - content_for :body_end
   javascript:
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
