changes to about page, call it a 'Guide' instead of an FAQ

--- a/app/assets/stylesheets/shared.sass
+++ b/app/assets/stylesheets/shared.sass
@@ -50,6 +50,8 @@
 
     li
       page-break-inside: avoid
+      .point h3
+        page-break-inside: avoid !important
 
 @media screen and (max-width: 415px)
   ol.nice_list li::before
