--- a/app/views/welcome/about.html.slim
+++ b/app/views/welcome/about.html.slim
@@ -3,22 +3,19 @@ markdown:
   # About this tool
   <p class="lead">This is a pre-alpha sketch for how GDS might share it's 2016/17 goals with the wider world. The aim is to make it simple for people to find out how our goals align to deliver our broader vision, who's doing what, how well we're delivering and where we need to make changes. It's very early days and is being developed without a service delivery team but with your input, it will improve. Thank you for contributing!</p>
 
-  ## FAQ
+  ## Guide
 
   ### My team's goals don't look quite right. Can I update them?
-  Yes! These goals have been developed with EMC, group PMOs and individual teams, but if your goals don't look right (e.g. the dates are no longer correct, the wording is wrong, they're not measurable, relavent, etc.) now is the time to discuss, challenge, and change them. At the moment everything is being held in [this sheet](https://docs.google.com/spreadsheets/d/1QVBu88HKPg3b9nNZP2KjmNUSIeoR0G5NaYus_p2oSZE/edit#gid=1344198253) and then parsed and put into this app. Please consult with your team or group and leave comments in the doc. If you're a delivery manager or group PMO, feel free to change these directly so that they reflect the actual ambitions of your team. [Peter Kappus](http://kapp.us) will import the latest goals each Friday afternoon.
+  Yes! Please contact your Group PMO to make sure the goals for your team are [accurate, measurable, and valuable](https://en.wikipedia.org/wiki/SMART_criteria). We expect to be updating these throughout the year.
 
-  ### How will we measure progress against these goals?
+  ### Measuring progress against goals
   Goals should be scorable at any time on a scale from 0-1 (or 0 to 100%). Soon, delivery managers, directors, product owners, etc. will be able to udpate scores as regularly as they like and must provide a brief narrative to explain the score they've given the goal at that time. If a goal has sub-goals, its score will be the average score of its sub-goals at any particular moment in time.
-
-  ### Can I just edit data directly in this app?
-  Someday you will be able to; for now, because we're making so many changes to the data, it's easier to talk about the changes, track them, and authenticate users, etc. in a Google Doc.
 
   ### Can I share this info publicly?
   Not just yet. This way of setting and tracking goals is new for GDS so we'd like to work out some of the issues before we share it with the world. However, everyone in GDS should be familiar with what's in here now so please share and debate internally as much as you like!
 
-  ### How can I help ?
-  Thanks for asking! There are lots of ways to help. The simplest is by using the tool and telling others about it. Feedback is very welcome. If you're in GDS please add your comments to [this doc](https://docs.google.com/document/d/1oR76UEjYT0DWFPk0wZVDaJxtAy5UevM2mIvoNmcZDCw/edit).  The code is all on [github](https://github.com/peterkappus/panoflex) and pull-requests are more than welcome! Are you a **developer, designer, content designer, user researcher, or service deisgner? Please get in touch; we'd love your help!
+  ### How can I help?
+  Thanks for asking! The most important thing is to get the content right. See above about speaking with your group PMO to improve the quality of the goals. There are lots of ways to help. The simplest is by using the tool and telling others about it. Feedback is very welcome. If you're in GDS please add your comments to [this doc](https://docs.google.com/document/d/1oR76UEjYT0DWFPk0wZVDaJxtAy5UevM2mIvoNmcZDCw/edit).  The code is all on [github](https://github.com/peterkappus/panoflex) and pull-requests are more than welcome! Are you a **developer, designer, content designer, user researcher, or service deisgner? Please get in touch; we'd love your help!
 
   ### Who made this thing?
   Currently it's being built by the Delivery Operations team at GDS. Come and say hello (on the 7th floor of Aviation House) if you'd like to learn more.
